<resources>
    <string name="app_name">Weather Events</string>
    <string name="eventTitle">Enter Details of Event for Current Location</string>
    <string name="eventSubtitle">Please Give Generously</string>
    <string name="eventButton">Add Event</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$%d</string>
    <string name="reportTitle">Events Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="action_event">Event</string>
    <string name="action_report">Report</string>
    <string name="action_location">Location</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">Weather Events (Labs)</string>
    <string name="nav_header_subtitle">voteforhomer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About Us</string>
    <string name="aboutus_title">Homer for President !!</string>
    <string name="eventsNotFound">No Events Yet…\nGo Make an Event!</string>
    <string name="aboutus_message">Hi, I\'m Dylan\n\nThis is my application for Msc Mobile Dev\n\n P.S. I hate UI work :) </string>
    <string name="eventError">Error : Couldn\'t Make an Event...</string>
    <string name="eventDetails">Event Details</string>
    <string name="amt">Amount :</string>
    <string name="event_type">Event Type :</string>
    <string name="message">Message:</string>
    <string name="messageLoading">Please Wait while the Events are Loading...</string>
    <string name="button_addImage"> Add Image </string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--    <string name="total_donated">$%d</string>-->
    <!--    <string name="totalSoFar">$ Total</string>-->

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="please_select_image">Please upload an image for this event</string>
    <string name="please_select_event">Please select an event for this event</string>
    <string name="choose_theme_text">Choose Theme</string>

    <string-array name="event_types">
        <item>Vehicle Crash</item>
        <item>Fallen Cables</item>
        <item>Fallen Tree</item>
        <item>Garda Checkpoint</item>
        <item>Oil Spill</item>
    </string-array>
</resources>