<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/eventFragment">

    <fragment
        android:id="@+id/eventFragment"
        android:name="ie.wit.donationx.ui.event.EventFragment"
        android:label="@string/action_event"
        tools:layout="@layout/fragment_event" >
        <action
            android:id="@+id/action_eventFragment_to_reportFragment"
            app:destination="@id/reportFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/reportFragment"
        android:name="ie.wit.donationx.ui.report.ReportFragment"
        android:label="@string/action_report"
        tools:layout="@layout/fragment_report" >
        <action
            android:id="@+id/action_reportFragment_to_eventFragment"
            app:destination="@id/eventFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ie.wit.donationx.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
</navigation>