<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventvm"
            type="ie.wit.eventx.ui.detail.EventDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.detail.EventDetailFragment">


            <TextView
                android:id="@+id/editEventtype"
                android:layout_width="235dp"
                android:layout_height="31dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@{eventvm.observableEvent.eventtype}"
                android:textAlignment="viewStart"
                android:textColor="@color/color_primary"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:text="@string/event_type"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/editEventtype"
                app:layout_constraintHorizontal_bias="0.29"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/message"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/editMessage"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/editMessage"
                android:layout_width="248dp"
                android:layout_height="159dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="4dp"
                android:background="@color/grey_300"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:text="@={eventvm.observableEvent.message}"
                android:textAlignment="viewStart"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editEventtype" />


            <ImageView
                android:id="@+id/eventImage"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="296dp"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:maxWidth="300dp"
                android:maxHeight="500dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/editEventButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteEventButton"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/deleteEventButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editEventButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>
